--- a/src/assets/css/_add_currency.scss
+++ b/src/assets/css/_add_currency.scss
@@ -31,38 +31,56 @@
     margin: 0 auto;
     background-image: url('../sprite/icons-crypto-1x.png');
   }
-  .card-img {
-    width: 70px;
-  }
-  .card {
-    width: 222px;
-    height: 208px;
-    box-shadow: none;
-  }
-  .added {
-    background-color: #eceff4;
-    box-shadow: inset 0 1px 3px 0 rgba(0, 0, 0, 0.1);
-  }
-  .not_added {
-    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.1);
-  }
-  .currency-name {
-    text-align: center;
-    font-size: 18px;
-    margin-bottom: 5px;
-    span:first-child {
-      opacity: 0.6;
-      margin-right: 6px;
+  .currency-cards {
+    margin-left: 32px;
+    margin-right: 32px;
+    .col {
+      padding-left: 4px;
+      padding-right: 4px;
     }
-    span:last-child {
-      opacity: 0.4;
+    .card-img {
+      width: 70px;
     }
-  }
-  .it_cycle_item {
-    svg {
-      position: relative;
-      top: 1px;
-      left: -1px;
+    .card {
+      //min-width: 200 px;
+      //width: 222px;
+      cursor: pointer;
+      width: 100%;
+      height: 208px;
+      box-shadow: none;
+      margin-top: 4px;
+      margin-bottom: 4px;
+    }
+    .added {
+      background-color: #eceff4;
+      box-shadow: inset 0 1px 3px 0 rgba(0, 0, 0, 0.1);
+    }
+    .not_added {
+      box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.1);
+    }
+    .currency-name {
+      text-align: center;
+      font-size: 18px;
+      margin-bottom: 5px;
+      margin-top: 5px;
+      span:first-child {
+        opacity: 0.6;
+        margin-right: 6px;
+      }
+      span:last-child {
+        opacity: 0.4;
+      }
+    }
+    .check {
+      margin-top: 16px;
+    }
+    .it_cycle_item {
+      margin-top: 11px;
+      svg {
+        position: relative;
+        top: 1px;
+        left: -1px;
+      }
     }
   }
 }
