--- a/src/assets/css/_modal.scss
+++ b/src/assets/css/_modal.scss
@@ -42,8 +42,17 @@
       padding-top: 60px;
       padding-bottom: 60px;
       .it-close {
-        top: 20px;
-        right: 20px;
+        background-color: transparent;
+        top: 6px;
+        right: 6px;
+        svg {
+          path {
+            fill: #80818e
+          }
+        }
+      }
+      label {
+        margin-bottom: 0;
       }
     }
   }
