--- a/src/assets/css/itrade.scss
+++ b/src/assets/css/itrade.scss
@@ -18,6 +18,7 @@
 @import "notification";
 @import "sign";
 @import "trader_bio";
+@import "trading";
 
 
 @font-face {
@@ -113,88 +114,6 @@ body {
   opacity: 0.8;
   box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.1);
   border: 1px solid rgba(0, 0, 0, .2);
-}
-.it-char {
-  span {
-    &:first-child {
-      opacity: 0.6;
-      font-size: 12px;
-      margin-right: .5em;
-    }
-    &:last-child {
-      font-size: 14px;
-      font-weight: 500;
-    }
-    @media (min-width: 1440px) {
-      &:first-child {
-        font-size: 16px;
-      }
-      &:last-child {
-        font-size: 20px;
-      }
-    }
-  }
-}
-.it-char-flex-other {
-  margin-top: 3px;
-  position: relative;
-  .it-char:last-child {
-    position: relative;
-    top: -3px;
-  }
-  @media (min-width: 1440px) {
-    margin-top: 9px;
-    .it-char {
-      span:first-child {
-        font-size: 12px;
-      }
-      span:last-child {
-        font-size: 14px;
-      }
-    }
-  }
-}
-.it-char-flex {
-  -ms-flex-direction: column !important;
-  flex-direction: column !important;
-  padding-left: .5em;
-  padding-right: .5em;
-  margin-left: 1.5em;
-  margin-top: 3px;
-  position: relative;
-  @media (max-width: 1439px) {
-    .it-char:last-child {
-      position: relative;
-      top: -3px;
-    }
-  }
-  @media (min-width: 1440px) {
-    margin-top: 0;
-    line-height: 60px;
-    -ms-flex-direction: row !important;
-    flex-direction: row !important;
-    div:first-child {
-      padding-right: .5em;
-    }
-    .it-char {
-      span:first-child {
-        position: relative;
-        top: -3px;
-        font-size: 12px;
-      }
-      span:last-child {
-        font-size: 20px;
-      }
-    }
-    .it-char:first-child {
-      margin-right: 20px;
-    }
-  }
-}
-.it-trading_view {
-  .card-body {
-    height: 453px;
-  }
 }
 .it-medium {
   font-weight: 500;
@@ -597,154 +516,6 @@ select, .it-pointer, svg {
   width: 9px;
   border-bottom: 1px solid black;
   opacity: 0.4;
-}
-.it-trading {
-  .order-dropdown {
-    height: 34px;
-    padding: 0 0.4em;
-  }
-  .dropdown-item {
-    padding-left: 30px;
-  }
-  .disabled.dropdown-item {
-    position: relative;
-    .dropdown-check {
-      position: absolute;
-      left: 8px;
-      top: 7px
-    }
-  }
-  .btn-buy {
-    margin-top: 20px;
-  }
-  .label-amount {
-    margin-top: 12px;
-  }
-  .market {
-    .card-body {
-      padding: 0;
-      padding-top: 10px;
-    }
-    table.market-history-table {
-        margin-bottom: 10px;
-        thead {
-          tr {
-            th {
-              border: none;
-              font-size: 12px;
-              padding-top: 4px;
-              padding-bottom: 4px;
-            }
-          }
-        }
-        tbody {
-          tr {
-            td {
-              border-top: none;
-              font-size: 12px;
-              padding-top: 4px;
-              padding-bottom: 4px;
-            }
-            &:hover, tr.active {
-              td {
-                background-color: #eceff4;
-              }
-            }
-          }
-          tr:first-child {
-            td {
-              border-top: 1px solid #dee2e6;
-            }
-          }
-          tr:last-child {
-            opacity: 0.5;
-          }
-        }
-    }
-  }
-  .row-padding {
-    .col {
-      padding-left: 13px;
-      padding-right: 16px;
-    }
-  }
-  .btn-buy-sell {
-    button {
-      width: 50%;
-      position: relative;
-      padding-top: 4px;
-      padding-bottom: 4px;
-      img {
-        position: relative;
-        top: -2.5px;
-        margin-right: 5.5px;
-      }
-    }
-  }
-  .col-lg-9 {
-    flex: 0 0 80%;
-    max-width: 80%;
-  }
-  .col-lg-3 {
-    flex: 0 0 20%;
-    max-width: 20%;
-  }
-  $buy-sell-width: 250px;
-
-  .main-view {
-    width: calc(100% - 16px - #{$buy-sell-width});
-    margin-right: 16px;
-    .it-trading_view {
-      height: 530px;
-    }
-  }
-  @media (max-width: 1435px) {
-    .main-view {
-      .it-trading_view {
-        height: 548px;
-      }
-    }
-  }
-  .buy-sell {
-    width: $buy-sell-width;
-    .card {
-      padding: 0;
-      .card-body {
-        padding-top: 8px;
-        padding-right: 24px;
-        padding-left: 24px;
-        label {
-          margin-bottom: 2px;
-        }
-        .input-group {
-          height: 34px;
-        }
-
-      }
-    }
-    position: relative;
-    .it-icon {
-      width: 18px;
-    }
-    .wallet-count-block {
-      margin-top: 2px;
-      .wallet-count {
-        position: relative;
-        top: 1px;
-      }
-    }
-  }
-  .order-book-card {
-    .card-body {
-      padding-bottom: 0;
-      padding-right: 5px;
-      padding-left: 5px;
-      padding-top: 10px;
-    }
-    .row-padding .col {
-      padding: 0;
-    }
-  }
 }
 .it-dashed {
   border-bottom: 1px dashed #282e3d;
