--- a/src/assets/css/_trader.scss
+++ b/src/assets/css/_trader.scss
@@ -15,6 +15,7 @@
     line-height: 40px;
     font-size: 20px;
     opacity: 0.8;
+    cursor: pointer;
   }
   .back-label {
     margin-top: 0.65rem;
