--- a/src/assets/css/_post.scss
+++ b/src/assets/css/_post.scss
@@ -1,5 +1,20 @@
 .it-post {
   padding-top: 90px;
+  position: relative;
+  .back {
+    position: absolute;
+    width: 38px;
+    height: 38px;
+    background-color: #eceff4;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 40px;
+    font-size: 20px;
+    opacity: 0.8;
+    top: 25px;
+    left: 25px;
+    cursor: pointer;
+  }
   input::placeholder, input:-ms-input-placeholder {
     color: #282e3d;
     opacity: 0.6;
