add scroll for small size screen

--- a/src/assets/css/_left_panel.scss
+++ b/src/assets/css/_left_panel.scss
@@ -78,4 +78,11 @@
     left: 0;
     z-index: 2;
   }
+  @media (max-height: 820px) {
+    overflow-y: scroll;
+    .footer {
+      position: relative;
+      margin-top: 440px;
+    }
+  }
 }
