--- a/src/assets/css/_my_orders.scss
+++ b/src/assets/css/_my_orders.scss
@@ -8,6 +8,7 @@
   box-shadow: 0 0 8px 0 rgba(0, 0, 0, .2);
   border-top-right-radius: 5px;
   z-index: 2;
+  overflow-y: scroll;
   .icons {
     position: relative;
     div:first-child {
