--- a/src/assets/css/_top_panel.scss
+++ b/src/assets/css/_top_panel.scss
@@ -7,6 +7,11 @@
   position: absolute;
   overflow-x: hidden;
   overflow-y: hidden;
+  //@media all and (max-width: 1020px){
+  //  background-color: red;
+  //  overflow: scroll;
+  //  width: 100%;
+  //}
   .nav-item {
     background-color: rgba(40, 46, 61, 0.07);
     height: 44px;
