fixed layout and codebase

--- a/src/assets/css/_add_currency.scss
+++ b/src/assets/css/_add_currency.scss
@@ -4,7 +4,7 @@
   top: 0;
   bottom: 0;
   width: 100%;
-  min-width: 1030px;
+  min-width: $container-min-width;
   .it_cycle_times {
     right: 5px;
   }
